--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ input {
     background-color: black;
     color: white;
     font-size: 12px;
+    vertical-align: top;
 }
 
 #keyboard input[value="ENTER"]:hover {
@@ -141,7 +142,7 @@ input {
     background-color: white;
     padding: 1% 2% 5%;
     top: 20%;
-    border-radius: 20px;;
+    border-radius: 20px;
 }
 
 #modal-end input[type="button"] {
@@ -161,7 +162,7 @@ input {
     cursor: pointer;
 }
 
-@media (min-width: 300px) {
+@media (max-width: 600px) {
     #keyboard input {
         width: 8%;
     }
